// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`navigation actions should create an action for a failed profile load 1`] = `
Object {
  "type": "PROFILE_FAILURE",
}
`;

exports[`navigation actions should create an action for a successful profile load 1`] = `
Object {
  "payload": Object {
    "profileData": "profile",
  },
  "type": "PROFILE_SUCCESS",
}
`;

exports[`navigation actions should create an action for profile fetch 1`] = `
Object {
  "type": "PROFILE_FETCHING",
}
`;

exports[`navigation actions should create an action to load a profile 1`] = `
Object {
  "payload": Object {
    "member": "token",
  },
  "type": "PROFILE_PROFILE",
}
`;

exports[`navigation actions should create an action to load a profile 2`] = `
Object {
  "payload": Object {
    "member": "abc123",
  },
  "type": "PROFILE_PROFILE",
}
`;
